# cengc24

./: LICENSE.txt  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/app/: app.py  interpreter.py  models.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_nothing.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  api.js  index.css
frontend/src/components/ui/: button.js  calendar.js  card.js  input.js  label.js  particles.js  popover.js
nginx/: nginx.conf
